back to the drawing board brand new start on html and j.s

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Quiz</title>
     <link rel="stylesheet" href="./Develop/style.css" />
-    <script src="./Develop/script.js"></script>
+
   </head>
-  
-  <body>
-    <header>
-        <h1>Quiz</h1>
-      </header>
-      <div id="div1">
-      </div>
+   <body>
+         <div class="containter">
+        <div id="div1">
+            <h2>The following question will test your coding skills</h2>
+            
 
 
+        </div>
+        </div>
+      <script src="./Develop/script.js"></script>
   </body>
 
 
