--- a/index.html
+++ b/index.html
@@ -8,31 +8,18 @@
     <link rel="stylesheet" href="./Develop/style.css" />
 
   </head>
-   <body>
-         <div class="containter">
-        <div id="div1">
-            <h2>The following question will test your coding skills</h2>
-            
+   
+  <body>
+    <div class="containter">
 
+        <div id="startquiz">
+            <h2>The following quiz will test your coding and web design skills</h2>
 
-        </div>
+        <button id="startbutton">Start Quiz</button>
+        <button id="ViewHighScore" onclick="ShowHighScore()">High Scores</button>   
+</div>
         </div>
       <script src="./Develop/script.js"></script>
   </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </html>
 
