created variables in j.s

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div id="startquiz">
                 <h2>The following quiz will test your coding and web design skills</h2>
-            <button id="startbutton">Start Quiz</button>
+            <button id="startButton">Start Quiz</button>
             <button id="ViewHighScore" onclick="ShowHighScore()">High Scores</button>   
             </div>
 
