--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
         <div class="containter">
 
-            <div id="startquiz">
+            <div id="startQuiz">
                 <h2>The following quiz will test your coding and web design skills</h2>
             <button id="startButton">Start Quiz</button>
             <button id="ViewHighScore" onclick="ShowHighScore()">High Scores</button>   
@@ -27,10 +27,14 @@
                 <div id="finalScore"></div>
             </div>
 
-            <div id=highScoreContainer>
-            <div id="high-score"></div>
+                <div id=highScoreContainer>
+                <div id="high-score"></div>
             </div>
 
+                <div id = "highScore-intials"></div>
+                <div id = "highScore-score"></div>
+            </div>
+            
             <div id="endGameButtons">
                 <button id="playAgain">Play Again</button>
             </div>
