--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 
             <div id="quiz">
                 <div id="timer">Time left:</div>
-                <div id="results"></div>
+                    <div id="questions"><p>Questions</p></div>
+                        <button id="A">A</button>
+                        <button id="B">B</button>
+                        <button id="C">C</button>
+                        <button id="D">D</button>
+                    <div id="results"></div>
             </div>
 
             <div id="gameOver">
@@ -34,7 +39,7 @@
                 <div id = "highScore-intials"></div>
                 <div id = "highScore-score"></div>
             </div>
-            
+
             <div id="endGameButtons">
                 <button id="playAgain">Play Again</button>
             </div>
