added submit name and submit highscore id

--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@
             </div>
 
             <div id="gameOver">
+
                 <div id="finalScore"></div>
+                <input type="text" size = "40" placeholder="Enter your name for high score" name="name" id="name"/>
+                <button id="submitScore">Submit Score</button>
+
             </div>
 
                 <div id=highScoreContainer>
                 <div id="high-score"></div>
+
             </div>
 
-                <div id = "highScore-intials"></div>
+                <div id = "highScoreNameInput"></div>
                 <div id = "highScore-score"></div>
+                
             </div>
 
             <div id="endGameButtons">
