minor details and updated readme

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
                 <div id = "highScoreNameInput"></div>
                 <div id = "highScore-score"></div>
-                
+
             </div>
 
-            <div id="endGameButtons">
+            <div id="endGameButton">
                 <button id="playAgain">Play Again</button>
             </div>
     
