--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div id="quiz">
                 <div id="timer">Time left:</div>
                     <div id="questions"><p>Questions</p></div>
-                        <button id="A">A</button>
-                        <button id="B">B</button>
-                        <button id="C">C</button>
-                        <button id="D">D</button>
+                        <button id="A" onclick="checkAnswer('A')">A</button>
+                        <button id="B" onclick="checkAnswer('B')">B</button>
+                        <button id="C" onclick="checkAnswer('C')">C</button>
+                        <button id="D" onclick="checkAnswer('D')">D</button>
                     <div id="results"></div>
             </div>
 
