made background color purple

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Quiz</title>
     <link rel="stylesheet" href="./Develop/style.css" />
-
   </head>
    
   <body>
@@ -21,17 +19,17 @@
             <div id="quiz">
                 <div id="timer">Time left:</div>
                     <div id="questions"><p>Questions</p></div>
-                        <button id="A" onclick="checkAnswer('A')">A</button>
-                        <button id="B" onclick="checkAnswer('B')">B</button>
-                        <button id="C" onclick="checkAnswer('C')">C</button>
-                        <button id="D" onclick="checkAnswer('D')">D</button>
+                        <button id="a" onclick="checkAnswer('a')">A</button>
+                        <button id="b" onclick="checkAnswer('b')">B</button>
+                        <button id="c" onclick="checkAnswer('c')">C</button>
+                        <button id="d" onclick="checkAnswer('d')">D</button>
                     <div id="results"></div>
             </div>
 
             <div id="gameOver">
 
                 <div id="finalScore"></div>
-                <input type="text" size = "40" placeholder="Enter your name for high score" name="name" id="name"/>
+                <input type="text" size = "40" placeholder="Enter your name for high score" name="first and last name" id="name"/>
                 <button id="submitScore">Submit Score</button>
 
             </div>
