added user's name & score to html

--- a/index.html
+++ b/index.html
@@ -31,22 +31,21 @@
                 <div id="finalScore"></div>
                 <input type="text" size = "40" placeholder="Enter your name for high score" name="first and last name" id="name"/>
                 <button id="submitScore">Submit Score</button>
-
             </div>
-
-                <div id=highScoreContainer>
-                <div id="high-score"></div>
-
-            </div>
-
+            <div id=highScoreContainer>
+            <div id="high-score"></div>
+                <div id="highscore-header">
+                    <h3>User's name</h3>
+                    <h3>Score</h3>
+                </div>
                 <div id = "highScoreNameInput"></div>
                 <div id = "highScore-score"></div>
-
             </div>
-
             <div id="endGameButton">
                 <button id="playAgain">Play Again</button>
             </div>
+        </div>
+    </div>    
     
         <script src="./Develop/script.js"></script>
     </body>
