--- a/index.html
+++ b/index.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="./Develop/style.css" />
-  </head>
-   
-  <body>
-        <div class="containter">
+    <link rel="stylesheet" href="./assets/style.css" />
+</head>
+<body>
+    <div class="container">
 
-            <div id="startQuiz">
-                <h2>The following quiz will test your coding and web design skills</h2>
-            <button id="startButton">Start Quiz</button>
-            <button id="ViewHighScore" onclick="ShowHighScore()">High Scores</button>   
-            </div>
-
-            <div id="quiz">
-                <div id="timer">Time left:</div>
-                    <div id="questions"><p>Questions</p></div>
-                        <button id="a" onclick="checkAnswer('a')">A</button>
-                        <button id="b" onclick="checkAnswer('b')">B</button>
-                        <button id="c" onclick="checkAnswer('c')">C</button>
-                        <button id="d" onclick="checkAnswer('d')">D</button>
-                    <div id="results"></div>
-            </div>
-
-            <div id="gameOver">
-
-                <div id="finalScore"></div>
-                <input type="text" size = "40" placeholder="Enter your name for high score" name="first and last name" id="name"/>
-                <button id="submitScore">Submit Score</button>
-            </div>
-            <div id=highScoreContainer>
-            <div id="high-score"></div>
-                <div id="highscore-header">
-                    <h3>User's name</h3>
-                    <h3>Score</h3>
-                </div>
-                <div id = "highScoreNameInput"></div>
-                <div id = "highScore-score"></div>
-            </div>
-            <div id="endGameButton">
-                <button id="playAgain">Play Again</button>
-            </div>
+        <div id="startQuiz">
+            <h2>The following quiz will test your coding and web design skills</h2>
+        <button id="startButton">Start Quiz</button>
+        <button id="ViewHighScorePage" onclick="showHighscore()">High Scores</button>
         </div>
-    </div>    
-    
-        <script src="./Develop/script.js"></script>
-    </body>
- </html>
 
+        <div id="quiz">
+            <div id="timer">Remaining time: </div>
+                <div id="questions"><p>Questions</p></div>
+                    <button id="a" onclick="checkAnswer('a')">A</button>
+                    <button id="b" onclick="checkAnswer('b')">B</button>
+                    <button id="c" onclick="checkAnswer('c')">C</button>
+                    <button id="d" onclick="checkAnswer('d')">D</button>
+                <div id="results"></div>
+        </div>
+        <div id="gameOver">
+
+            <div id="finalScore"></div>
+            <input type="text" size = "40" placeholder="Enter your name for high score" name="name" id="name"/>
+            <button id="submitScore">Submit Score</button>
+        </div>
+        <div id=highscoreContainer>
+        <div id="high-score">
+            <div id="highscore-header">
+                <h3>Users name</h3>
+                <h3>Score</h3>
+            </div>
+            <div id = "highScoreNameInput"></div>
+            <div id = "highScore-score"></div>
+        </div>
+        <div id="endGameButton">
+            <button id="playAgain" onclick="replayQuiz()">Play Again</button>
+            <button id="clearHighscore" onclick="clearScore()">Clear Highscores</button>
+        </div>
+    </div>
+    </div>
+    <script src="./assets/script.js"></script>
+</body>
+</html>
