--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="gameOver">
 
             <div id="finalScore"></div>
-            <input type="text" size = "40" placeholder="Enter your name for high score" name="name" id="name"/>
+            <input type="text" size = "40" placeholder="Enter your initials for high score" name="name" id="name"/>
             <button id="submitScore">Submit Score</button>
         </div>
         <div id=highscoreContainer>
