--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div id="quiz">
-            <div id="timer">Remaining time: </div>
+            <div id="timer">GO!</div>
                 <div id="questions"><p>Questions</p></div>
                     <button id="a" onclick="checkAnswer('a')">A</button>
                     <button id="b" onclick="checkAnswer('b')">B</button>
